[tool.poetry]
name = "slides"
version = "0.1.0"
description = "Slides for Vim/Tmux tutorial"
authors = ["Sam Roeca <samuel.roeca@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
hovercraft = "^2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
